--- a/TechStore-frontend/public/index.html
+++ b/TechStore-frontend/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="Author" content="Cristian Murillo">
     <link rel="icon" href="<%= BASE_URL %>computers.ico">
     <title>Compumundohipermegared</title>
   </head>
